--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<meta charset="utf-8">
-<title>3つの数字を揃えろ</title>
+<title>match all three numbers</title>
 </head>
 <body>
-    <h2>3つの数字を揃えろ</h2>
-    <p>3つの数字</p>
+    <h2>Match all three numbers</h2>
+    <p>Three numbers</p>
     <script src = "functions.js"></script>
 
 
